mudança no readme e rodapé no site

--- a/index.html
+++ b/index.html
@@ -74,4 +74,17 @@
 
   <script src="script.js"></script>
 </body>
+<footer>
+  <div class="container-footer">
+    <p>© 2025 ConectaVoluntário. Todos os direitos reservados.</p>
+    <p>Contato: <a href="mailto:contato@conectavoluntario.org">ricardogonzaga1998@outlook.com</a> | Tel: (43) 999108179</p>
+    <p>
+      Siga-nos: |
+      <a href="https://www.instagram.com/ricardogonzaga98/" target="_blank" rel="noopener" aria-label="Instagram">Instagram</a> |
+      <a href="https://wa.me/5543999108179" target="_blank" rel="noopener" aria-label="WhatsApp">WhatsApp</a>
+    </p>
+  </div>
+</footer>
+
+
 </html>
