alguns objetivos e ideias no site

--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
   </section>
 
   <section>
+    <h2>As nossas ideias com o Impacto Social</h2>
+    <p>Nosso compromisso com a transformação social vai além da ajuda imediata. Aqui estão algumas iniciativas e ideias que desenvolvemos ou queremos implementar com a ajuda de voluntários:</p>
+    <ul>
+      <li><strong>Oficinas profissionalizantes:</strong> Cursos gratuitos de informática, culinária, costura ou elétrica para capacitação de pessoas em situação de rua e comunidades vulneráveis.</li>
+      <li><strong>Feiras de cidadania:</strong> Ações comunitárias para emissão de documentos, atendimento médico básico e orientação jurídica gratuita.</li>
+      <li><strong>Parcerias com comércios locais:</strong> Para doações de alimentos, roupas, cortes de cabelo e outros serviços solidários.</li>
+      <li><strong>Campanhas educativas em escolas:</strong> Sensibilização de jovens sobre empatia, responsabilidade social e voluntariado.</li>
+      <li><strong>Mutirões ambientais:</strong> Limpeza de espaços públicos, reciclagem e educação sobre o descarte correto do lixo.</li>
+      <li><strong>Rodas de conversa e acolhimento:</strong> Momentos de escuta ativa, apoio emocional e valorização das histórias de vida das pessoas atendidas.</li>
+      <li><strong>Programa de adoção solidária:</strong> Conectar famílias doadoras a famílias em situação de vulnerabilidade para apoio mensal com cestas básicas.</li>
+      <li><strong>Distribuição de kits de higiene:</strong> Para pessoas em situação de rua, com itens como sabonete, escova, absorventes e álcool gel.</li>
+    </ul>
+  </section>
+
+  <section>
     <h2>Cadastro de Voluntário</h2>
     <form id="cadastroForm" novalidate>
       <label for="nome">Nome completo*</label>
@@ -74,17 +89,18 @@
 
   <script src="script.js"></script>
 </body>
+
 <footer>
   <div class="container-footer">
     <p>© 2025 ConectaVoluntário. Todos os direitos reservados.</p>
-    <p>Contato: <a href="mailto:contato@conectavoluntario.org">ricardogonzaga1998@outlook.com</a> | Tel: (43) 999108179</p>
+    <p>Contato: <a href="mailto:ricardogonzaga1998@outlook.com">ricardogonzaga1998@outlook.com</a> | Tel: (43) 99910-8179</p>
     <p>
-      Siga-nos: |
+      Siga-nos: 
       <a href="https://www.instagram.com/ricardogonzaga98/" target="_blank" rel="noopener" aria-label="Instagram">Instagram</a> |
-      <a href="https://wa.me/5543999108179" target="_blank" rel="noopener" aria-label="WhatsApp">WhatsApp</a>
+      <a href="https://wa.me/5543999108179" target="_blank" rel="noopener" aria-label="WhatsApp">WhatsApp</a> |
+      <a href="https://www.facebook.com/seuusuario" target="_blank" rel="noopener" aria-label="Facebook">Facebook</a>
     </p>
   </div>
 </footer>
-
 
 </html>
