modificaçao do css

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <p>
         Siga-nos: 
         <a href="https://www.instagram.com/ricardogonzaga98/" target="_blank" rel="noopener">Instagram</a> |
-        <a href="https://wa.me/5543999108179" target="_blank" rel="noopener">WhatsApp</a> |
+        <a href="https://wa.me/5543999108179" target="_blank" rel="noopener">WhatsApp</a>
       </p>
     </div>
   </footer>
