mais funcionalidades no site como as opçoes e sugestoes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <nav class="top-nav">
+    <a href="index.html">Início</a>
+    <a href="#cadastro">Cadastro</a>
+    <a href="opcoes.html">Explorar Opções</a>
+    <a href="#contato">Contato</a>
+  </nav>
 
   <header class="hero">
     <div class="hero-content">
@@ -15,6 +21,7 @@
       <h1>ConectaVoluntário</h1>
       <p>Juntos somos mais fortes. Conectando quem precisa com quem quer ajudar.</p>
       <a href="#cadastro" class="btn-primary">Quero ser voluntário</a>
+      <a href="opcoes.html" class="btn-primary">Explorar Opções</a>
     </div>
   </header>
 
@@ -30,7 +37,7 @@
         <li>📦 Arrecadação de alimentos não perecíveis para comunidades carentes.</li>
         <li>🧥 Doação e distribuição de roupas para pessoas em situação de rua.</li>
         <li>🎉 Apoio na organização de eventos beneficentes.</li>
-        <li>🗣️ Ações de conscientização e escuta ativa em bairros vulneráveis.</li>
+        <li>🔣 Ações de conscientização e escuta ativa em bairros vulneráveis.</li>
       </ul>
     </section>
 
@@ -43,7 +50,7 @@
         <li><strong>🏫 Educação nas escolas:</strong> Projetos de empatia e voluntariado.</li>
         <li><strong>🌍 Mutirões ambientais:</strong> Limpeza urbana e reciclagem.</li>
         <li><strong>💬 Rodas de acolhimento:</strong> Apoio emocional e escuta ativa.</li>
-        <li><strong>🧺 Kits de higiene:</strong> Dignidade para quem mais precisa.</li>
+        <li><strong>🮺 Kits de higiene:</strong> Dignidade para quem mais precisa.</li>
       </ul>
     </section>
 
@@ -91,7 +98,7 @@
     </section>
   </main>
 
-  <footer>
+  <footer id="contato">
     <div class="container-footer">
       <p>© 2025 ConectaVoluntário. Todos os direitos reservados.</p>
       <p>Contato: <a href="mailto:ricardogonzaga1998@outlook.com">ricardogonzaga1998@outlook.com</a> | Tel: (43) 99910-8179</p>
