coloquei os objetivos no site e os focos

--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
   </header>
 
   <main class="container">
+    <section id="objetivos">
+        <h2>Objetivos do ConectaVoluntário</h2>
+        <ul>
+          <li><strong>Conectar pessoas dispostas a ajudar</strong> com causas e projetos sociais reais.</li>
+          <li><strong>Facilitar o acesso</strong> a oportunidades de voluntariado em diferentes áreas e comunidades.</li>
+          <li><strong>Promover o impacto social</strong> por meio da colaboração, empatia e solidariedade.</li>
+          <li><strong>Valorizar o trabalho voluntário</strong> e inspirar mais pessoas a fazerem a diferença.</li>
+        </ul>
+      </section>
+
     <section>
       <h2>Sobre a Plataforma</h2>
       <p>Somos um movimento social que conecta voluntários com causas reais nas comunidades. Acreditamos que todo mundo pode contribuir para transformar vidas e gerar impacto positivo.</p>
