--- a/index.html
+++ b/index.html
@@ -26,9 +26,16 @@
     </div>
   </header>
 
+  <!-- Box de chamada para ação -->
+  <section class="cta-box">
+    <h2>💚 Faça parte da mudança!</h2>
+    <p>Seja voluntário e ajude a transformar vidas na sua comunidade. Toda ajuda faz a diferença!</p>
+    <a href="#cadastro" class="btn-primary">Quero me cadastrar</a>
+  </section>
+
   <main class="container">
     <section id="objetivos">
-        <h2>Objetivos do ConectaVoluntário</h2>
+        <h2><span style="font-size:1.3em;vertical-align:middle;">🎯</span> Objetivos do ConectaVoluntário</h2>
         <ul>
           <li><strong>Conectar pessoas dispostas a ajudar</strong> com causas e projetos sociais reais.</li>
           <li><strong>Facilitar o acesso</strong> a oportunidades de voluntariado em diferentes áreas e comunidades.</li>
@@ -37,13 +44,18 @@
         </ul>
       </section>
 
-    <section>
-      <h2>Sobre a Plataforma</h2>
-      <p>Somos um movimento social que conecta voluntários com causas reais nas comunidades. Acreditamos que todo mundo pode contribuir para transformar vidas e gerar impacto positivo.</p>
+    <!-- Destaque de impacto social -->
+    <section class="impacto-box">
+      <h2>🌟 Nosso Impacto</h2>
+      <div class="impacto-numeros">
+        <div><strong>+200</strong><br>Voluntários</div>
+        <div><strong>+50</strong><br>Ações realizadas</div>
+        <div><strong>+1000</strong><br>Pessoas beneficiadas</div>
+      </div>
     </section>
 
     <section>
-      <h2>Demandas Atuais</h2>
+      <h2><span style="font-size:1.2em;vertical-align:middle;">📦</span> Demandas Atuais</h2>
       <ul>
         <li>📦 Arrecadação de alimentos não perecíveis para comunidades carentes.</li>
         <li>🧥 Doação e distribuição de roupas para pessoas em situação de rua.</li>
@@ -53,7 +65,7 @@
     </section>
 
     <section>
-      <h2>Ideias com Impacto Social</h2>
+      <h2><span style="font-size:1.2em;vertical-align:middle;">💡</span> Ideias com Impacto Social</h2>
       <ul>
         <li><strong>🌱 Oficinas profissionalizantes:</strong> Capacitação para o mercado de trabalho.</li>
         <li><strong>🧑‍⚕️ Feiras de cidadania:</strong> Saúde, documentos e orientação gratuita.</li>
@@ -65,34 +77,53 @@
       </ul>
     </section>
 
+    <!-- Depoimentos de voluntários -->
+    <section class="depoimentos-box">
+      <h2><span style="font-size:1.2em;vertical-align:middle;">💬</span> Depoimentos</h2>
+      <div class="depoimentos-lista">
+        <blockquote>
+          <p>“Ser voluntário mudou minha vida. Conheci pessoas incríveis e pude ajudar quem realmente precisava!”</p>
+          <footer>— Ana Paula, voluntária</footer>
+        </blockquote>
+        <blockquote>
+          <p>“A plataforma facilitou muito para encontrar projetos próximos de mim. Recomendo para todos!”</p>
+          <footer>— João Carlos, voluntário</footer>
+        </blockquote>
+        <blockquote>
+          <p>“Recebemos apoio essencial dos voluntários. Gratidão por cada gesto de solidariedade.”</p>
+          <footer>— Maria, beneficiada</footer>
+        </blockquote>
+      </div>
+    </section>
+
     <section id="cadastro">
       <h2>Cadastro de Voluntário</h2>
       <form id="cadastroForm" novalidate>
-        <label for="nome">Nome completo*</label>
+        <label for="nome"><span class="form-icon">👤</span> Nome completo*</label>
         <input type="text" id="nome" name="nome" required placeholder="Seu nome completo" />
 
-        <label for="email">E-mail*</label>
+        <label for="email"><span class="form-icon">✉️</span> E-mail*</label>
         <input type="email" id="email" name="email" required placeholder="email@exemplo.com" />
 
-        <label for="telefone">Telefone</label>
+        <label for="telefone"><span class="form-icon">📱</span> Telefone</label>
         <input type="tel" id="telefone" name="telefone" placeholder="(99) 99999-9999" />
 
-        <label for="cep">CEP*</label>
+        <label for="cep"><span class="form-icon">🏠</span> CEP*</label>
         <input type="text" id="cep" name="cep" required placeholder="00000-000" maxlength="9" />
 
-        <label for="logradouro">Logradouro</label>
+        <label for="logradouro"><span class="form-icon">📍</span> Logradouro</label>
         <input type="text" id="logradouro" name="logradouro" readonly />
 
-        <label for="bairro">Bairro</label>
+        <label for="bairro"><span class="form-icon">🏘️</span> Bairro</label>
         <input type="text" id="bairro" name="bairro" readonly />
 
-        <label for="cidade">Cidade</label>
+        <label for="cidade"><span class="form-icon">🏙️</span> Cidade</label>
         <input type="text" id="cidade" name="cidade" readonly />
 
-        <label for="estado">Estado</label>
+        <label for="estado"><span class="form-icon">🌎</span> Estado</label>
         <input type="text" id="estado" name="estado" readonly />
 
-        <label for="disponibilidade">Disponibilidade*</label>
+        <label for="disponibilidade"><span class="form-icon">⏰</span> Disponibilidade*</label>
         <select id="disponibilidade" name="disponibilidade" required>
           <option value="">Selecione</option>
           <option value="fim-de-semana">Fins de semana</option>
@@ -100,7 +131,7 @@
           <option value="qualquer-dia">Qualquer dia</option>
         </select>
 
-        <label for="observacoes">Observações (opcional)</label>
+        <label for="observacoes"><span class="form-icon">📝</span> Observações (opcional)</label>
         <textarea id="observacoes" name="observacoes" rows="3"></textarea>
 
         <button type="submit" class="btn-submit">Enviar Cadastro</button>
