Atualiza rodapé: remove telefone, mantém e-mail, Instagram e WhatsApp

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   <footer id="contato">
     <div class="container-footer">
       <p>© 2025 ConectaVoluntário. Todos os direitos reservados.</p>
-      <p>Contato: <span class="contato-icon"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/microsoftoutlook.svg" alt="Outlook" style="width:1.1em;vertical-align:middle;filter:grayscale(1);margin-right:0.2em;"></span> <a href="mailto:ricardogonzaga1998@outlook.com">ricardogonzaga1998@outlook.com</a> | <span class="contato-icon"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp" style="width:1.1em;vertical-align:middle;filter:grayscale(1);margin-right:0.2em;"></span> Tel: (43) 99910-8179</p>
+      <p>Contato: <span class="contato-icon"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/microsoftoutlook.svg" alt="Outlook" style="width:1.1em;vertical-align:middle;filter:grayscale(1);margin-right:0.2em;"></span> <a href="mailto:ricardogonzaga1998@outlook.com">ricardogonzaga1998@outlook.com</a></p>
       <p>
         Siga-nos: 
         <span class="contato-icon"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" style="width:1.1em;vertical-align:middle;filter:grayscale(1);margin-right:0.2em;"></span> <a href="https://www.instagram.com/ricardogonzaga98/" target="_blank" rel="noopener">Instagram</a> |
