--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
         <label for="cep"><span class="form-icon">🏠</span> CEP*</label>
         <input type="text" id="cep" name="cep" required placeholder="00000-000" maxlength="9" />
 
+        <label for="numero"><span class="form-icon">#️⃣</span> N° da casa*</label>
+        <input type="text" id="numero" name="numero" required placeholder="Número da residência" />
+
         <label for="logradouro"><span class="form-icon">📍</span> Logradouro</label>
         <input type="text" id="logradouro" name="logradouro" readonly />
 
